--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "baseUrl": ".",
     "declaration": true,
     "declarationDir": "dist",
-    "declarationMap": true,
+    "declarationMap": false,
     "paths": {
       "*": [
         "node_modules/*",
