--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 
 {
   "compilerOptions": {
-    "module": "es6",
+    "module": "commonjs",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "target": "es6",
