--- a/tsconfig.release.json
+++ b/tsconfig.release.json
@@ -2,6 +2,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "target": "es6",
