--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "build": "rm -rf dist && tsc -p ./tsconfig.json"
   },
   "dependencies": {
+    "@dfuse/client": "^0.3.6",
     "eosjs": "^20.0.3",
     "eosjs-ecc": "^4.0.7",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "ws": "^7.2.1"
   },
   "devDependencies": {
     "@types/node": "^13.1.6",
